
             • check for insufficient values in the data set and return
               ‘NULL’ (before the function crashed),

             • data frame also exports now error of the D0-values based
               on the MC runs for the De error,

             • the option ‘fit.includingRepeatedRegPoints = FALSE’ was
               not respected properly under all circumstances;
               corrected.

         • ‘plot_Histogram()’

             • New argument ‘interactive’ to produce an interactive
               plot using the JavaScript graphing library 'plotly.js'
               (requires the 'plotly' package).

         • ‘plot_KDE()’

             • Boxplot option added,

             • Depreciated arguments removed (centrality, dispersion,
               weights, polygon.col),

             • Colour specification simplified,

             • Summary keywords homogenised,

             • Layout functionality implemented.

         • ‘plot_RLum.Analysis()’

             • All ‘...’ arguments can now be provided as ‘vector’ or
               ‘list’ to gain more control of the plot appearance,

             • argument ‘abline’ now works also in combination with
               ‘combine = TRUE’ and allows to set ablines independently
               over different plots (#260),

             • automatic axes labelling improved for ‘combine = TRUE’,

             • support further ‘...’ argument ‘legend’ (TRUE/FALSE),

             • add support for argument ‘smooth’ for ‘RLum.Data.Curve’
               objects (see entry for ‘plot_RLum.Data.Curve’,

             • fix minor bug introduced for the acceptence of the
               argument ‘lty’.

         • ‘plot_RLum.Data.Curve()’

             • Fix seldom bug that causes unexpected function behaviour
               if ‘xlab’ or ‘ylab’ exist as objects on the global
               environment (#265),

             • add argument ‘smooth’ to provide an automatic curve