@@ -296,7 +296,13 @@ Changes in version 0.6.0 (May 20th ,2016):
 
              • the option ‘fit.includingRepeatedRegPoints = FALSE’ was
                not respected properly under all circumstances;
-               corrected.
+               corrected,
+
+             • under rather rare circumstances the function became
+               trapped in an endless mode as the function ‘nls’ is
+               trapped in such mode if only two points are provided.
+               The minimum of required data points for ‘EXP’ was set to
+               three.
 
          • ‘plot_Histogram()’
 
